--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,6 +49,13 @@
   <h1>Oh, Hi there!</h1>
   
   {% endblock %}
+  {% block content2 %}
+
+  {% endblock %}
+  {% block content3 %}
+
+  {% endblock %}
 </body>
+<footer>&copy; Brandt Carlson 2022</footer>
 
 </html>
