--- a/app/templates/rm.html
+++ b/app/templates/rm.html
@@ -9,9 +9,9 @@
 {% for c in new.chars %}
 <div class="container-fluid">
   <div class="row m-auto">
-  <h1>Let's play with the Rick and Morty API!</h1>
-<h4>A random character:</h4>
-<p>Each time the page is reloaded you get a new one!</p>
+    <h1>Let's play with the Rick and Morty API!</h1>
+    <h4>A random character:</h4>
+    <p>Each time the page is reloaded you get a new one!</p>
     <div id="rand-card" class="card m-auto" style="max-width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
@@ -35,28 +35,20 @@
 
 {% block content2 %}
 <div class="container-fluid">
-<!-- <div class="input-group mb-3">
-  <button class="btn btn-outline-secondary" type="button">Build Episode:</button>
-  
-  <select class="form-select" id="inputGroupSelect03" >
-    <option selected>Choose...</option>
-    <option value="{{ epform.ep_choice }}"></option>
-    <option value="2"></option>
-    <option value="3"></option>
-  </select>
-</div> -->
-
-<form method="POST">
   <div class="row">
-  <div id="epform" class="form-group">
-    <fieldset id="ep-choice">
-      {{ epform.ep_choice.label }}
-      {{ epform.ep_choice }}
-    </fieldset>
-    <br>
-    {{ epform.submit }}
+  <form method="POST">
+    <div id="epform" class="form-group">
+      <fieldset id="ep-choice">
+        {{ epform.ep_choice.label }}
+        {{ epform.ep_choice }}
+      </fieldset>
+      <br>
+      {{ epform.submit }}
+    </div>
+  </form>
   </div>
+  <div class="row">
+    {% for  %}
   </div>
-</form>
 </div>
 {% endblock %}
