--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,11 +46,34 @@
     </div>
   </nav>
   {% block content %}
-  <h1>Oh, Hi there!</h1>
-  
+  <div id="bhead" class="container-fluid">
+    <h1>Oh, Hi there!</h1>
+    <h3>I'm Brandt.</h3>
+    <h5>I make things with technology.</h5>
+    <h6><small>I don't love talking about myself but:</small></h6>
+  </div>
   {% endblock %}
   {% block content2 %}
-
+  <div class="container-fluid">
+    <h3>More about me!</h3>
+    <div class="row">
+      <form method="POST">
+        <div id="typeform" class="form-group">
+          <div class="col">
+            <fieldset id="type_choice">
+              {{ form.type_choice.label }}
+              {{ form.type_choice }}
+            </fieldset>
+            <fieldset id="l_choice">
+              {{ form.l_choice.label }}
+              {{ form.l_choice }}
+            </fieldset>
+            {{ form.submit }}
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
   {% endblock %}
   {% block content3 %}
 
