--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -83,7 +83,7 @@
   <hr>
   {% endblock %}
   {% block content3 %}
-  <div class="container-fluid">
+  <div id="bio" class="container-fluid shadow-lg mb-3 rounded-3">
   <h6 id="bio-body">{{ bb }}</h6>
   </div>
   {% endblock %}
