--- a/app/templates/rm.html
+++ b/app/templates/rm.html
@@ -37,7 +37,7 @@
 {% block content2 %}
 <div class="container-fluid">
   <h3>Episode Builder:</h3>
-  <p>Select an episode to see summary information and all of the characters. </p>
+  <p>Select an episode to see summary information and all of the characters. Fan?  Re-live it broh.</p>
   <div class="row">
     <form method="POST">
       <div id="epform" class="form-group">
