--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,19 +33,25 @@
             <a class="nav-link" href="/rm">Rick + Morty</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" disabled="true">About</a>
+            <a class="nav-link" href="#" disabled="true"></a>
           </li>
         </ul>
         <span class="navbar-text">
-        <a href="https://github.com/Brandt-C"><img src="../static/images/GitHub-Mark-Light-32px.png" alt="Github logo link" style="width:32px;height:32px;" ></a>
-        <a href="https://www.linkedin.com/in/brandt-carlson-51735625/"><img src="../static/images/SeekPng.com_linkedin-logo-transparent-png_5538632.png" alt="Linked in logo link" style="width:32px;height:32px;" ></a>
+          <a href="https://github.com/Brandt-C"><img src="../static/images/GitHub-Mark-Light-32px.png"
+              alt="Github logo link" style="width:32px;height:32px;"></a>
+          <a href="https://www.linkedin.com/in/brandt-carlson-51735625/"><img
+              src="../static/images/SeekPng.com_linkedin-logo-transparent-png_5538632.png" alt="Linked in logo link"
+              style="width:32px;height:32px;"></a>
+          <a href="mailto: Brandt.Carlson11@gmail.com"><img src="../static/images/email-logo.png" alt="click to email"
+              style="width:32px;height:32px;"></a>
         </span>
       </div>
     </div>
   </nav>
   {% block content %}
   <div id="bhead" class="container-fluid">
-    <img id="headshot" src="../static/images/headshot_LI_rs.jpg" alt="Brandt headshot" class="img-fluid rounded-circle border border-4 border-dark mt-2">
+    <img id="headshot" src="../static/images/headshot_LI_rs.jpg" alt="Brandt headshot"
+      class="img-fluid rounded-circle border border-4 border-dark mt-2 ">
     <h1>Oh, Hi there!</h1>
     <h3>I'm Brandt.</h3>
     <h5>I make things with technology.</h5>
@@ -56,7 +62,7 @@
   {% block content2 %}
   <h3>More about me!</h3>
   <div id="bio-choice" class="container-fluid">
-    
+
     <div class="d flex-row m-auto">
       <form method="POST">
         <div id="typeform" class="form-group">
@@ -65,14 +71,14 @@
               {{ form.type_choice.label }}
               {{ form.type_choice }}
             </fieldset>
-            </div>
-            <div class="col p-0">
+          </div>
+          <div class="col p-0">
             <fieldset id="l_choice">
               {{ form.l_choice.label }}
               {{ form.l_choice }}
             </fieldset>
-            </div>
-            <div class="col p-0">
+          </div>
+          <div class="col p-0">
             {{ form.submit }}
           </div>
         </div>
@@ -83,8 +89,16 @@
   {% endblock %}
   {% block content3 %}
   <div id="bio" class="container-fluid shadow-lg mb-3 rounded-3">
-  <h6 id="bio-body">{{ bb }}</h6>
+    <h6 id="bio-body">{{ bb }}</h6>
   </div>
+  {% endblock %}
+
+  {% block content4 %}
+  <div class="container">
+
+
+  </div>
+
   {% endblock %}
 </body>
 <footer>&copy; Brandt Carlson 2022</footer>
