--- a/app/templates/rm.html
+++ b/app/templates/rm.html
@@ -101,6 +101,7 @@
     <h2><strong>{{loc.name}}</strong></h2>
     <h5>{{loc.type}}</h5>
     <h5>{{loc.dimension}}</h5>
+    <h6>Residents:</h6>
   </div>
   {% endif %}
   <div class="row justify-content-center">
