--- a/app/static/css/rm.css
+++ b/app/static/css/rm.css
@@ -10,10 +10,13 @@
 .card {
     padding: 2px;
     margin: 2px;
-    background-color: rgb(207, 207, 207);
+    background-color: rgb(82, 81, 81);
     
 }
 #cb-char {
     max-height: 68px;
 }
-
+.card-body {
+    background-color: darkgrey;
+    /* border-top: 2px, solid, black; */
+}
