--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img class="img-fluid" height="30" width="45" src="../static/images/logo1st.png"
+      <a  class="navbar-brand" href="/"><img id="logo" class="img-fluid" height="30" width="45" src="../static/images/logo1st.png"
           alt="logo for Brandt" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
