--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="/rm">Rick + Morty</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" disabled="true"></a>
+            <a class="nav-link" href="/f1" >F1 Data</a>
           </li>
         </ul>
         <span class="navbar-text">
