--- a/app/templates/f1.html
+++ b/app/templates/f1.html
@@ -1,8 +1,9 @@
-{% extends 'index.html' %}
+{% extends './components/layout.html' %}
 
 {% block css %}
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
 <script src="../static/js/f1.js" defer></script>
+<link rel="stylesheet" href="../static/css/main.css">
 <link rel="stylesheet" href="../static/css/f1.css">
 
 {% endblock %}
