--- a/app/templates/rm.html
+++ b/app/templates/rm.html
@@ -1,6 +1,7 @@
-{% extends 'index.html' %}
+{% extends './components/layout.html' %}
 
 {% block css %}
+<link rel="stylesheet" href="../static/css/main.css">
 <link rel="stylesheet" href="../static/css/rm.css">
 {% endblock %}
 <!--  Maybe add a little explanation here to clarify what/why on this page???-->
