--- a/app/templates/components/layout.html
+++ b/app/templates/components/layout.html
@@ -1,1 +1,62 @@
-<!-- This is for modulation in the event that I continue to build on this -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brandt's API Playground</title>
+    <link rel="icon" href="../static/images/favi32.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    {% block css %}
+    <link rel="stylesheet" href="../static/css/main.css">
+
+    {% endblock %}
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/"><img id="logo" class="img-fluid" height="30" width="45"
+                    src="../static/images/logo1st.png" alt="logo for Brandt" /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/rm">Rick + Morty</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/f1">F1 Data</a>
+                    </li>
+                </ul>
+                <span class="navbar-text">
+                    <a href="https://github.com/Brandt-C"><img src="../static/images/GitHub-Mark-Light-32px.png"
+                            alt="Github logo link" style="width:32px;height:32px;"></a>
+                    <a href="https://www.linkedin.com/in/brandt-carlson-51735625/"><img
+                            src="../static/images/SeekPng.com_linkedin-logo-transparent-png_5538632.png"
+                            alt="Linked in logo link" style="width:32px;height:32px;"></a>
+                    <a href="mailto: Brandt.Carlson11@gmail.com"><img src="../static/images/email-logo.png"
+                            alt="click to email" style="width:32px;height:32px;"></a>
+                </span>
+            </div>
+        </div>
+    </nav>
+    {% block content %}
+    {% endblock %}
+
+    {% block content2 %}
+    {% endblock %}
+
+    {% block content3 %}
+    {% endblock %}
+
+    {% block content4 %}
+    {% endblock %}
