--- a/app/templates/components/layout.html
+++ b/app/templates/components/layout.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
 
     {% block css %}
-    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../../static/css/layout.css">
 
     {% endblock %}
 </head>
